--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,39 @@
+_Updates: 16 May 2023_
+
+* Update: Option to serve the Google Fonts files locally
+* Update: Pro account login. Allow up to 5 device sessions per user account
+* Update: Context loop integration. Speed up everyone's page-building process. It's similar to the Gutenberg "query loop block" but it's integrated with Maxi's blocks; container, row, column, and group. It works with the responsive grid and dynamic content. Required for the Blog block. Create dynamic page layout templates with advanced controls. The feature uses patterns and dynamic content to produce structured layout templates with dynamic content such as blog index, search, archives, custom posts, galleries and so on. Tutorial videos coming soon
+* Update: Constants with static text as buttons field option
+* Update: Implement static text as Dynamic content for button maxi
+* Update: Modified cleanAttributes to keep boolean attributes
+* Update: Migrated full-width attributes from string to boolean
+* Update: Dynamic content (dc), add users relation options
+* Update: Dynamic content, implement dc author on frontend
+* Update: Give updated attributes to save migrators
+* Update: Add support for style card modal in full set editing mode
+* Fix: Custom colours for style cards
+* Fix: Dialogue box for Site Editing UI
+* Fix: Style card variables for Site Editing back-end
+* Fix: Possible 404 errors for Google fonts
+* Fix: Various PHP warnings
+* Fix: Warnings on React 18
+* Fix: Better image import handling from template library for images with similar names
+* Fix: Style cards not editable on XXL breakpoint
+* Fix: Style cards bug on lower breakpoints
+* Fix: Search block icon position
+* Fix: Dynamic content, fix author on editor
+* Fix: Button hover migration bug
+* Fix: Style card variables and styles for Button Maxi
+* Fix: Undefined button font
+* Fix: button icon palette
+* Fix: Style card colour on frontend
+* Fix: Dynamic content, content for Site Editing
+
+_Updates: 8 May 2023_
+
+* Fix: Pro library sign-in, better compatibility for email addresses with unconventional TLDs
+* Fix: Improve authentication for in
+
 _Updates: 28 April 2023_
 
 * Enable pro library sign up, sign in and downloads
