--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,29 @@
+_Updates: 10 September 2023_
+
+Update: Overhauled styles, metadata, and fonts management processes
+Update: Integrated PHP for block and attribute registration
+Update: Enhanced code optimization and general performance
+Update: Plugin's user interface for a better user experience
+Update: Maxi blocks are now compatible with Synced Patterns (formerly Reusable Blocks)
+Update: Strengthened support for Site EditorUpdate: Refined error handling for Dynamic Content
+Update: Introduced a new loading animation for the Template Library Maxi block
+Update: UI enhancements for margin and padding settings
+Update: Introduced a new Context Loop icon
+Update: Added a character limit option for titles within Dynamic Content
+Update: Updated button icon customization with "before" and "after" options in Custom CSS
+Update: Optimized native Gutenberg blocks to work seamlessly with Style Cards
+Update: Modified scroll effects to utilize the transform property instead of position for better performance
+Update: Enabled image positioning without needing the fit wrapper option.
+Fix: Corrected column width issue for Repeater
+Fix: Fixed transform target for Interaction Builder
+Fix: Implemented an option to ensure equal size for Divider canvas
+Fix: Adjusted Repeater to set height based on content
+Fix: Resolved Repeater's block movement bug
+Fix: Fixed row scheme alterations for nested blocks within rows using Repeater
+Fix: Re-introduced the sign-in button for expired plugin activations
+Fix: Addressed Interaction Builder target issues with Repeater enabled
+Fix: Rectified callout arrow positioning
+
 _Updates: 7 August 2023_
 
 * Update: WordPress 6.3 compatibility
